--- a/GWenvs.yml
+++ b/GWenvs.yml
@@ -178,6 +178,7 @@ dependencies:
   - openjpeg=2.5.0=h7d73246_1
   - openmpi=5.0.6=hd45feaf_100
   - openssl=3.4.0=hb9d3cd8_0
+  - pip
   - packaging=24.1=pyhd8ed1ab_0
   - pandas=2.2.3=py311h7db5c69_1
   - parallel-bilby=2.0.2=pyhd8ed1ab_0
